# spectral-learn

./: .dropbox  README.md  README.txt
code/em/treba/gsl-1.0/: AUTHORS  ChangeLog  KNOWN-PROBLEMS  MACHINES  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acconfig.h  autogen.sh  config.h.in  configure  configure.in  gsl-histogram.c  gsl-randist.c  gsl.pc.in  gsl.spec.in  gsl_math.h  gsl_mode.h  gsl_pow_int.h  gsl_precision.h  gsl_version.h  gsl_version.h.in  templates_on.h  test_gsl_histogram.sh  version.c
code/em/treba/gsl-1.0/blas/: ChangeLog  Makefile.in  TODO  blas.c  gsl_blas.h  gsl_blas_types.h
code/em/treba/gsl-1.0/block/: ChangeLog  Makefile.am  Makefile.in  block_source.c  fprintf_source.c  fwrite_source.c  gsl_block_complex.h  init_source.c  test.c  test_complex_io.c  test_complex_source.c  test_io.c  test_source.c
code/em/treba/gsl-1.0/cblas/: ChangeLog  Makefile.am  Makefile.in  TODO  caxpy.c  ccopy.c  cdotc_sub.c  cdotu_sub.c  cgbmv.c  cgemm.c  cgemv.c  cgerc.c  cgeru.c  chbmv.c  chemm.c  chemv.c  cher.c  cher2.c  cher2k.c  cherk.c  chpmv.c  chpr.c  chpr2.c  cscal.c  csscal.c  cswap.c  csymm.c  csyr2k.c  csyrk.c  ctbmv.c  ctbsv.c  ctpmv.c  ctpsv.c  ctrmm.c  ctrmv.c  ctrsm.c  ctrsv.c  dasum.c  daxpy.c  dcopy.c  (+204 more)
code/em/treba/gsl-1.0/cheb/: ChangeLog  Makefile.am  Makefile.in  deriv.c  eval.c  gsl_chebyshev.h  init.c  integ.c  test.c
code/em/treba/gsl-1.0/complex/: ChangeLog  Makefile.am  Makefile.in  TODO  gsl_complex_math.h  math.c  test.c
code/em/treba/gsl-1.0/const/: ChangeLog  Makefile.am  Makefile.in  gsl_const.h  gsl_const_cgs.h  gsl_const_mks.h  gsl_const_num.h
code/em/treba/gsl-1.0/dht/: Makefile.am  Makefile.in  dht.c  gsl_dht.h  test.c
code/em/treba/gsl-1.0/diff/: Makefile.am  Makefile.in  diff.c  gsl_diff.h  test.c
code/em/treba/gsl-1.0/doc/: ChangeLog  Makefile.am  Makefile.in  blas.texi  cblas.texi  cheb.texi  complex.texi  const.texi  debug.texi  dht.texi  diff.texi  eigen.texi  err.texi  fdl.texi  fft.texi  fit-wlinear.eps  fit-wlinear2.eps  fitting.texi  gpl.texi  gsl-design.texi  gsl-ref.info  gsl-ref.info-1  gsl-ref.info-10  gsl-ref.info-11  gsl-ref.info-12  gsl-ref.info-13  gsl-ref.info-14  gsl-ref.info-15  gsl-ref.info-16  gsl-ref.info-17  gsl-ref.info-18  gsl-ref.info-19  gsl-ref.info-2  gsl-ref.info-20  gsl-ref.info-21  gsl-ref.info-22  gsl-ref.info-3  gsl-ref.info-4  gsl-ref.info-5  gsl-ref.info-6  (+91 more)
code/em/treba/gsl-1.0/eigen/: ChangeLog  Makefile.am  Makefile.in  gsl_eigen.h  herm.c  hermv.c  jacobi.c  qrstep.c  sort.c  symm.c  symmv.c  test.c
code/em/treba/gsl-1.0/err/: ChangeLog  Makefile.am  Makefile.in  error.c  gsl_errno.h  gsl_message.h  message.c  stream.c  test.c  warn.c
code/em/treba/gsl-1.0/fft/: ChangeLog  Makefile.am  Makefile.in  TODO  bitreverse.c  bitreverse.h  c_init.c  c_main.c  c_pass.h  c_pass_2.c  c_pass_3.c  c_pass_4.c  c_pass_5.c  c_pass_6.c  c_pass_7.c  c_pass_n.c  c_radix2.c  compare.h  compare_source.c  dft_source.c  factorize.c  factorize.h  fft.c  gsl_dft_complex.h  gsl_dft_complex_float.h  gsl_fft.h  gsl_fft_complex.h  gsl_fft_complex_float.h  gsl_fft_halfcomplex.h  gsl_fft_halfcomplex_float.h  gsl_fft_real.h  gsl_fft_real_float.h  hc_init.c  hc_main.c  hc_pass.h  hc_pass_2.c  hc_pass_3.c  hc_pass_4.c  hc_pass_5.c  hc_pass_n.c  (+20 more)
code/em/treba/gsl-1.0/fit/: ChangeLog  Makefile.am  Makefile.in  gsl_fit.h  linear.c
code/em/treba/gsl-1.0/gsl/: Makefile.am  Makefile.in
code/em/treba/gsl-1.0/histogram/: ChangeLog  Makefile.am  Makefile.in  add.c  add2d.c  calloc_range.c  calloc_range2d.c  copy.c  copy2d.c  file.c  file2d.c  find.c  find2d.c  get.c  get2d.c  gsl_histogram.h  gsl_histogram2d.h  init.c  init2d.c  maxval.c  maxval2d.c  oper.c  oper2d.c  params.c  params2d.c  pdf.c  pdf2d.c  reset.c  reset2d.c  stat.c  test.c  test2d.c  test2d_resample.c  test2d_trap.c  test_resample.c  test_trap.c  urand.c
code/em/treba/gsl-1.0/ieee-utils/: ChangeLog  Makefile.am  Makefile.in  endian.c  env.c  fp-aix.c  fp-darwin.c  fp-freebsd.c  fp-hpux.c  fp-hpux11.c  fp-irix.c  fp-m68klinux.c  fp-netbsd.c  fp-openbsd.c  fp-os2emx.c  fp-ppclinux.c  fp-solaris.c  fp-sparclinux.c  fp-sunos4.c  fp-tru64.c  fp-unknown.c  fp-x86linux.c  fp.c  gsl_ieee_utils.h  make_rep.c  print.c  read.c  standardize.c  test.c
code/em/treba/gsl-1.0/integration/: ChangeLog  Makefile.am  Makefile.in  TODO  append.c  err.c  gsl_integration.h  initialise.c  ptsort.c  qag.c  qagp.c  qags.c  qawc.c  qawf.c  qawo.c  qaws.c  qc25c.c  qc25f.c  qc25s.c  qcheb.c  qelg.c  qk.c  qk15.c  qk21.c  qk31.c  qk41.c  qk51.c  qk61.c  qmomo.c  qmomof.c  qng.c  qng.h  qpsrt.c  qpsrt2.c  set_initial.c  test.c  tests.c  tests.h  util.c  workspace.c
code/em/treba/gsl-1.0/interpolation/: ChangeLog  Makefile.am  Makefile.in  TODO  accel.c  akima.c  bsearch.c  bsearch.h  cspline.c  gsl_interp.h  gsl_spline.h  integ_eval.h  interp.c  linear.c  spline.c  test.c
code/em/treba/gsl-1.0/linalg/: ChangeLog  Makefile.am  Makefile.in  apply_givens.c  balance.c  bidiag.c  cholesky.c  givens.c  gsl_linalg.h  hermtd.c  hh.c  householder.c  householdercomplex.c  lu.c  luc.c  multiply.c  qr.c  qrpt.c  svd.c  svdstep.c  symmtd.c  test.c  tridiag.c  tridiag.h
code/em/treba/gsl-1.0/matrix/: ChangeLog  Makefile.am  Makefile.in  copy_source.c  file_source.c  getset_source.c  gsl_matrix_char.h  gsl_matrix_complex_double.h  gsl_matrix_complex_float.h  gsl_matrix_complex_long_double.h  gsl_matrix_double.h  gsl_matrix_float.h  gsl_matrix_int.h  gsl_matrix_long.h  gsl_matrix_long_double.h  gsl_matrix_short.h  gsl_matrix_uchar.h  gsl_matrix_uint.h  gsl_matrix_ulong.h  gsl_matrix_ushort.h  init_source.c  matrix_source.c  minmax_source.c  oper.c  oper_source.c  prop_source.c  rowcol_source.c  submatrix_source.c  swap_source.c  test.c  test_complex_source.c  test_source.c  view_source.c
code/em/treba/gsl-1.0/min/: ChangeLog  Makefile.am  Makefile.in  bracketing.c  brent.c  convergence.c  fsolver.c  golden.c  gsl_min.h  min.h  test.c  test.h  test_funcs.c
code/em/treba/gsl-1.0/monte/: ChangeLog  Makefile.am  Makefile.in  TODO  gsl_monte.h  gsl_monte_miser.h  gsl_monte_plain.h  (+6 more)
(+13234 files in other folders)
